@@ -80,6 +80,8 @@ Date: 2024-08-09
     - Deleted chalk.
     - Changed oleum-based sulfur to take 3 vanadium-oxide catalyts instead of 4.
     - Deleted the filter long-handed inserter.
+    - Began trimming old, mostly ex-alt technologies. They might get added back later, but for now im slimming it down.
+    - Changed (fusion) fission reactor equipment technologies to a trigger technology.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
